frontend/tests/cases/negative/indexed/impossiblePat.gr
data Vec (n : Nat) t where
  Nil  : Vec 0 t;
  Cons : t → Vec n t → Vec (n+1) t

last : ∀ {a : Type, n : Nat} . (Vec (n+1) (Int [0..1])) → Int
last Nil = 0;
last (Cons [x] Nil)   = x;
last (Cons [_] xs)    = last xs
